--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,4 +7,7 @@
           android:icon="@drawable/action_search"
           android:title="@string/action_websearch"
           android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/action_settings"
+          android:title="@string/action_bar_settings"
+          android:showAsAction="withText" />
 </menu>
