--- a/res/layout/fragment_analysis_map.xml
+++ b/res/layout/fragment_analysis_map.xml
@@ -1,7 +1,7 @@
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:gravity="center"
-    android:padding="32dp" />
+<?xml version="1.0" encoding="utf-8"?>
+<com.google.android.gms.maps.mapview 
+xmlns:android="http://schemas.android.com/apk/res/android" 
+android:layout_width="match_parent" 
+android:layout_height="match_parent" 
+android:id="@+id/mapView">
+</com.google.android.gms.maps.mapview>
