--- a/res/layout/fragment_cell_information.xml
+++ b/res/layout/fragment_cell_information.xml
@@ -1,125 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 
-        android:useDefaultMargins="true"
-        android:alignmentMode="alignBounds"
-        android:columnOrderPreserved="false"
+	android:useDefaultMargins="true"
+	android:alignmentMode="alignBounds"
+	android:columnOrderPreserved="false"
 
-        android:columnCount="7"
-				>
-
-    <TextView
-            android:text="Phone Type:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="GSM"
-            android:layout_gravity="left"
-						/>
-
-
-
-    <TextView
-            android:text="Cell:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="Ifff"
-            android:layout_gravity="left"
-						/>
-
-
-    <TextView
-            android:text="Operator:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="Vodafone.de"
-            android:layout_gravity="left"
-						/>
-
-
-    <TextView
-            android:text="Net Type:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="HSDPA"
-            android:layout_gravity="left"
-						/>
-
-
-    <TextView
-            android:text="Neighboors:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="43934, 3499349, 439943"
-            android:layout_gravity="left"
-						/>
-
-
-    <TextView
-            android:text="MCC MNC:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="8249248"
-            android:layout_gravity="left"
-						/>
-
-
-    <TextView
-            android:text="Country:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="de"
-            android:layout_gravity="left"
-						/>
-
-    <TextView
-            android:text="RSSI:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
+	android:columnCount="7"
+	android:layout_margin="20dp"
+	>
 
 	<TextView
-            android:id="@+id/rssi"
-            android:text="99"
-            android:layout_gravity="left"
-            />
+		android:layout_columnSpan="2"
+		android:layout_gravity="center_horizontal"
+		android:text="Cell Information"
+		android:layout_column="0"
+		/>
 
-    <TextView
-            android:text="RSSI:"
-            android:layout_column="0"
-            android:layout_gravity="left"
-						/>
 
-    <Button
-        android:id="@+id/buttonrefresh"
-        android:text="Refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        />
+	<TextView
+		android:text="Cell:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="Ifff"
+		android:layout_gravity="left"
+		/>
+
+
+	<TextView
+		android:text="Operator:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="Vodafone.de"
+		android:layout_gravity="left"
+		/>
+
+
+	<TextView
+		android:text="Net Type:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="HSDPA"
+		android:layout_gravity="left"
+		/>
+
+
+	<TextView
+		android:text="Neighboors:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="43934, 3499349, 439943"
+		android:layout_gravity="left"
+		/>
+
+
+	<TextView
+		android:text="MCC MNC:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="8249248"
+		android:layout_gravity="left"
+		/>
+
+
+	<TextView
+		android:text="Country:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="de"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="RSSI:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:id="@+id/rssi"
+		android:text="99"
+		android:layout_gravity="left"
+		/>
+
+	<TextView
+		android:text="RSSI:"
+		android:layout_column="0"
+		android:layout_gravity="left"
+		/>
+
+	<Button
+		android:id="@+id/buttonrefresh"
+		android:text="Refresh"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:clickable="true"
+		/>
 
 </GridLayout>
