--- a/res/layout/fragment_cell_information.xml
+++ b/res/layout/fragment_cell_information.xml
@@ -2,15 +2,15 @@
 <GridLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
 
 	android:useDefaultMargins="true"
 	android:alignmentMode="alignBounds"
 	android:columnOrderPreserved="false"
 
-	android:columnCount="11"
-	android:layout_margin="20dp"
+	android:columnCount="10"
+	android:layout_margin="1dp"
 	>
 
 
@@ -18,136 +18,272 @@
 	<TextView
 		android:text="Operator Name:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		style="@android:style/TextAppearance.Medium"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/network_operator_name"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:layout_width="fill_parent"
+		android:textSize="15dp"
+		/>
+
 
 	<TextView
 		android:text="Operator:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/network_operator"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
+		/>
+
 
 	<TextView
 		android:text="Network Country ISO Code:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
-        android:id="@+id/network_country_iso"
+		android:id="@+id/network_country_iso"
 		android:text="unknown"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
+
 
 	<TextView
 		android:text="Network Type:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/networktype"
-        android:text="unknown"
-		android:layout_gravity="left"
+    android:text="unknown"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 
 	<TextView
 		android:text="Signal strength (dbm):"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/rssi"
 		android:text="99"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
+
 
 	<TextView
 		android:text="Sim Operator:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/simoperator"
 		android:text="unknown"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
+
 
 	<TextView
 		android:text="Sim Operator Name:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/simoperatorname"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
+		/>
+
 
 	<TextView
 		android:text="Device ID:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/device_id"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
+		/>
+
 
 	<TextView
 		android:text="Cell ID:"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/cid"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/lgray"
+		android:textSize="15dp"
+		/>
+
+
 	<TextView
 		android:text="Location area code (LAC):"
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
 		/>
 
 	<TextView
 		android:id="@+id/lac"
 		android:text="unknown"
-		android:layout_gravity="left"
-        />
-
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
+		android:background="@color/llgray"
+		android:textSize="15dp"
+		/>
 
 	<TextView
 		android:text=""
 		android:layout_column="0"
-		android:layout_gravity="left"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
 		/>
 
-	<Button
-		android:id="@+id/buttonrefresh"
-		android:text="Refresh"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:clickable="true"
+	<TextView
+		android:text=""
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
+		android:paddingRight="5dp"
+		android:paddingLeft="5dp"
+		android:layout_gravity="fill"
 		/>
+
 
 </GridLayout>
