--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,17 +4,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-            android:title="sfdggs">
+            android:title="Settings">
             
         <CheckBoxPreference
                 android:key="checkbox_preference"
-                android:title="dfgsg"
-                android:summary="sdfgsdfgsfdg" />
+                android:title="Background Measurement"
+                android:summary="Take measurements while app running in background" />
 
     </PreferenceCategory>
                 
     <PreferenceCategory
-            android:title="sfgdfgsfg">
+			android:title="Update Interval">
+
+        <CheckBoxPreference
+                android:key="foo_preference"
+                android:title="Sync"
+								android:summary="Sync over GPRS/HSDPA/LTE" />
 
         <EditTextPreference
                 android:key="edittext_preference"
@@ -24,8 +29,8 @@
                 
         <ListPreference
                 android:key="list_preference"
-                android:title="sdfsfd"
-                android:summary="sdfsdf"
+                android:title="Measurement Rate"
+                android:summary="When should the Cellperf take measurements"
                 android:entries="@array/entries_list_preference"
                 android:entryValues="@array/entryvalues_list_preference"
                 android:dialogTitle="sdfsdfsdf" />
