--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -21,11 +21,6 @@
                 android:title="Sync"
 								android:summary="Sync over GPRS/HSDPA/LTE" />
 
-        <EditTextPreference
-                android:key="edittext_preference"
-                android:title="df"
-                android:summary="sdfsdfs"
-                android:dialogTitle="sdfsdfs" />
                 
         <ListPreference
                 android:key="list_preference"
@@ -33,58 +28,9 @@
                 android:summary="When should the Cellperf take measurements"
                 android:entries="@array/entries_list_preference"
                 android:entryValues="@array/entryvalues_list_preference"
-                android:dialogTitle="sdfsdfsdf" />
+                android:dialogTitle="Measurement Interval" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory
-            android:title="sdfsdfsdf">
-
-        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
-             in word processing). Like for other preference types, we assign a key
-             here so it is able to save and restore its instance state. -->
-        <PreferenceScreen
-                android:key="screen_preference"
-                android:title="sdfsdf"
-                android:summary="sdfsdfs">
-            
-            <!-- You can place more preferences here that will be shown on the next screen. -->
-                     
-            <CheckBoxPreference
-                    android:key="next_screen_checkbox_preference"
-                    android:title="sdfsfds"
-                    android:summary="dfdfgdfg" />
-                
-        </PreferenceScreen>
-
-        <PreferenceScreen
-                android:title="dgdfggffdg"
-                android:summary="dfdfgdfgfd">
-
-            <intent android:action="android.intent.action.VIEW"
-                    android:data="http://www.android.com" />
-
-        </PreferenceScreen>
-
-    </PreferenceCategory>
-    
-    <PreferenceCategory
-            android:title="sdfdsfsd">
-    
-        <CheckBoxPreference
-                android:key="parent_checkbox_preference"
-                android:title="dfgdfg"
-                android:summary="sdfgdfgdfg fg" />
-
-        <!-- The visual style of a child is defined by this styled theme attribute. -->
-        <CheckBoxPreference
-                android:key="child_checkbox_preference"
-                android:dependency="parent_checkbox_preference"
-                android:layout="?android:attr/preferenceLayoutChild"
-                android:title="dfgdfggfd"
-                android:summary="fgfdgdg" />
-            
-    </PreferenceCategory>
-    
 </PreferenceScreen>
 
